[gd_scene load_steps=32 format=3 uid="uid://cytkeawwyxou4"]

[ext_resource type="Script" path="res://Scenes/Enemies/Demon.gd" id="1_2lpa2"]
[ext_resource type="Shader" path="res://Scenes/Effects/Dissolve.gdshader" id="2_17nvr"]
[ext_resource type="SpriteFrames" uid="uid://dtn2tefi1gdk2" path="res://Resources/Enemies/Demon/DemonFrames.tres" id="2_c2n2y"]
[ext_resource type="Shader" path="res://Scenes/Effects/HitFlash.gdshader" id="2_dffha"]
[ext_resource type="PackedScene" uid="uid://c0f7n0y0tqlul" path="res://Scenes/Components/HealthComponent.tscn" id="4_hgyht"]
[ext_resource type="Resource" uid="uid://npyacyqr4qy8" path="res://Resources/Enemies/Demon/DemonArmorStats.tres" id="5_fxm68"]
[ext_resource type="PackedScene" uid="uid://cd2tlp65h22wn" path="res://Scenes/Components/HurtboxComponent.tscn" id="5_xc1px"]
[ext_resource type="PackedScene" uid="uid://bco2bxp5k2mng" path="res://Scenes/Components/HitboxComponent.tscn" id="7_6yl46"]
[ext_resource type="Resource" uid="uid://sjydcbkri7vk" path="res://Resources/Enemies/Demon/DemonDamageStats.tres" id="7_8c7sv"]
[ext_resource type="Script" path="res://Scripts/States/StateMachine.gd" id="9_wny2r"]
[ext_resource type="Script" path="res://Scripts/States/EnemyStates/Idle.gd" id="10_e1is4"]
[ext_resource type="Script" path="res://Scripts/States/EnemyStates/Death.gd" id="11_iknqj"]
[ext_resource type="Script" path="res://Scripts/States/EnemyStates/Chase.gd" id="12_70csn"]
[ext_resource type="Script" path="res://Scripts/States/EnemyStates/Attack.gd" id="13_j8erd"]
[ext_resource type="PackedScene" uid="uid://cnkjd4vx6wkpa" path="res://Scenes/Effects/BloodSplatter.tscn" id="15_vosuy"]
[ext_resource type="Texture2D" uid="uid://csprqwgcj3gms" path="res://Assets/Sprites/Enemies/Demon/breath-fire.png" id="16_f4e4k"]
[ext_resource type="AudioStream" uid="uid://8ynixqg6dctd" path="res://Assets/SFX/Enemies/Boss/Boss_Attack.mp3" id="18_0tchr"]
[ext_resource type="AudioStream" uid="uid://baooiw27fafc7" path="res://Assets/SFX/Enemies/Boss/Boss_Hit.mp3" id="18_bpqav"]
[ext_resource type="AudioStream" uid="uid://wsvkkhmw4heb" path="res://Assets/SFX/Enemies/Boss/Boss_Death.mp3" id="19_0thpg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xjhv5"]
resource_local_to_scene = true
shader = ExtResource("2_17nvr")
shader_parameter/progress = 0.0
shader_parameter/noise_desnity = 60.0
shader_parameter/beam_size = 0.026
shader_parameter/color = Color(0.72549, 0.0666667, 0.129412, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wgdn1"]
size = Vector2(46, 72)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_inrsb"]
size = Vector2(47, 73)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5kjqj"]
size = Vector2(47, 73)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tvax3"]
size = Vector2(120, 80)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kcp8m"]
shader = ExtResource("2_dffha")
shader_parameter/active = true
shader_parameter/tint = Color(0.309804, 0.686275, 0.85098, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_8xvga"]
atlas = ExtResource("16_f4e4k")
region = Rect2(0, 0, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihry4"]
atlas = ExtResource("16_f4e4k")
region = Rect2(160, 0, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_h35mr"]
atlas = ExtResource("16_f4e4k")
region = Rect2(320, 0, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_rytwy"]
atlas = ExtResource("16_f4e4k")
region = Rect2(480, 0, 160, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0m71"]
atlas = ExtResource("16_f4e4k")
region = Rect2(640, 0, 160, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_ywdep"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xvga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihry4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h35mr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rytwy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0m71")
}],
"loop": false,
"name": &"default",
"speed": 8.0
}]

[node name="Demon" type="CharacterBody2D" node_paths=PackedStringArray("health_bar", "health_component")]
z_index = 3
collision_layer = 6
collision_mask = 6
motion_mode = 1
slide_on_ceiling = false
floor_constant_speed = true
script = ExtResource("1_2lpa2")
health_bar = NodePath("CanvasLayer/MarginContainer/VBoxContainer/ProgressBar")
is_airborne = true
health_component = NodePath("HealthComponent")
aggro_distance = 300
attack_range = 79
speed = 65
attack_frame = 7
damage_label_position = Vector2(35, -35)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_xjhv5")
position = Vector2(-4, -12)
scale = Vector2(0.8, 0.8)
sprite_frames = ExtResource("2_c2n2y")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-9, 5)
shape = SubResource("RectangleShape2D_wgdn1")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true

[node name="HealthComponent" parent="." instance=ExtResource("4_hgyht")]
max_health = 60

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("5_xc1px")]
position = Vector2(-9, -3)
collision_layer = 144
collision_mask = 144
health_component = NodePath("../HealthComponent")
armor_stats = ExtResource("5_fxm68")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, 7.5)
shape = SubResource("RectangleShape2D_inrsb")

[node name="AutoattackHitbox" parent="." instance=ExtResource("7_6yl46")]
position = Vector2(-9, -3)
collision_layer = 96
collision_mask = 96
damage_stats = ExtResource("7_8c7sv")
should_autoattack = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="AutoattackHitbox"]
position = Vector2(0, 7.5)
shape = SubResource("RectangleShape2D_5kjqj")

[node name="HitboxComponent" parent="." instance=ExtResource("7_6yl46")]
position = Vector2(-70, 45)
collision_layer = 96
collision_mask = 96
damage_stats = ExtResource("7_8c7sv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("RectangleShape2D_tvax3")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("9_wny2r")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy", "sprite", "navigation_agent", "patrol_timer")]
script = ExtResource("10_e1is4")
enemy = NodePath("../..")
sprite = NodePath("../../AnimatedSprite2D")
navigation_agent = NodePath("../../NavigationAgent2D")
patrol_timer = NodePath("../../Timers/PatrolCycleTimer")

[node name="Death" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy", "sprite")]
script = ExtResource("11_iknqj")
enemy = NodePath("../..")
sprite = NodePath("../../AnimatedSprite2D")
fall_on_death = false

[node name="Chase" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy", "sprite", "navigation_agent")]
script = ExtResource("12_70csn")
enemy = NodePath("../..")
sprite = NodePath("../../AnimatedSprite2D")
navigation_agent = NodePath("../../NavigationAgent2D")

[node name="Attack" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy", "sprite", "attack_cooldown", "hitbox", "external_attack_animation")]
script = ExtResource("13_j8erd")
enemy = NodePath("../..")
sprite = NodePath("../../AnimatedSprite2D")
attack_cooldown = NodePath("../../Timers/AttackCooldownTimer")
hitbox = NodePath("../../HitboxComponent")
external_attack_animation = NodePath("../../FireBreathAnimation")
external_attack_trigger_frame = 6
attack_sound_stream = ExtResource("18_0tchr")

[node name="Timers" type="Node" parent="."]

[node name="PatrolCycleTimer" type="Timer" parent="Timers"]

[node name="AttackCooldownTimer" type="Timer" parent="Timers"]
wait_time = 1.2
one_shot = true

[node name="BloodSplatter" parent="." instance=ExtResource("15_vosuy")]
material = SubResource("ShaderMaterial_kcp8m")
position = Vector2(19, -5)
emitting = false

[node name="FireBreathAnimation" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(-80, 43)
sprite_frames = SubResource("SpriteFrames_ywdep")
frame = 4
frame_progress = 1.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Asylekh, The flame pariah"

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer/MarginContainer/VBoxContainer"]
layout_mode = 2
step = 1.0
value = 100.0

[node name="Sounds" type="Node" parent="."]

[node name="HitSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("18_bpqav")
volume_db = 10.0

[node name="DeathSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("19_0thpg")
